--- a/template.yaml
+++ b/template.yaml
@@ -14,17 +14,24 @@ spec:
   parameters:
     - title: Provide repository info
       required:
-        - repoUrl
+        - repoHost
+        - repoOrg
+        - repoName
       properties:
-        repoUrl:
-          title: Repository Location
+        repoHost:
+          title: Host
           type: string
-          ui:field: RepoUrlPicker
-          ui:options:
-            allowedHosts:
-              - github.com
-            allowedOrganizations:
-              - ONS-Innovation
+          default: github.com
+          readOnly: true
+        repoOrg:
+          title: Organization
+          type: string
+          default: ONS-Innovation
+          readOnly: true
+        repoName:
+          title: Repository Name
+          type: string
+          description: Enter the name of the repository
 
   steps:
     - id: fetch
@@ -58,7 +65,7 @@ spec:
       name: Open a PR
       action: publish:github:pull-request
       input:
-        repoUrl: ${{ parameters.repoUrl }}
+        repoUrl: ${{ parameters.repoHost }}/${{ parameters.repoOrg }}/${{ parameters.repoName }}
         title: "Add ADR file"
         branchName: "add-adr-file"
         description: |
