--- a/template.yaml
+++ b/template.yaml
@@ -65,7 +65,7 @@ spec:
       name: Open a PR
       action: publish:github:pull-request
       input:
-        repoUrl: ${{ parameters.repoHost }}/${{ parameters.repoOrg }}/${{ parameters.repoName }}
+        repoUrl: ${{ parameters.repoHost }}?repo=${{ parameters.repoName }}&owner=${{ parameters.repoOrg }}
         title: "Add ADR file"
         branchName: "add-adr-file"
         description: |
