--- a/template.yaml
+++ b/template.yaml
@@ -33,36 +33,42 @@ spec:
           type: string
           description: Enter the name of the repository
 
-    - title: Options
+    - title: ADR Options
       properties:
         preFill:
           type: boolean
           title: Pre fill ADR fields
           default: false
-        autoMerge:
-          type: boolean
-          title: Auto merge PR and register
-          default: false
-
-    - title: ADR Details
-      if: { properties: { preFill: { const: true } } }
-      required: [adrTitle, adrStatus, adrContext, adrDecision, adrConsequences]
-      properties:
-        adrTitle:
-          type: string
-          title: ADR Title
-        adrStatus:
-          type: string
-          title: Status
-        adrContext:
-          type: string
-          title: Context
-        adrDecision:
-          type: string
-          title: Decision
-        adrConsequences:
-          type: string
-          title: Consequences
+      dependencies:
+        preFill:
+          oneOf:
+            - properties:
+                preFill:
+                  const: false
+            - required:
+                - adrTitle
+                - adrStatus
+                - adrContext
+                - adrDecision
+                - adrConsequences
+              properties:
+                preFill:
+                  const: true
+                adrTitle:
+                  type: string
+                  title: ADR Title
+                adrStatus:
+                  type: string
+                  title: Status
+                adrContext:
+                  type: string
+                  title: Context
+                adrDecision:
+                  type: string
+                  title: Decision
+                adrConsequences:
+                  type: string
+                  title: Consequences
 
   steps:
     - id: fetch
@@ -100,21 +106,7 @@ spec:
           This PR adds a docs/adr.md file as part of architectural documentation.
         targetPath: "."
         commitMessage: "Add ADR file"
-
-    - id: merge
-      name: Auto-merge PR
-      if: ${{ parameters.autoMerge }}
-      action: github:merge-pull-request
-      input:
-        pullRequestNumber: ${{ steps.pr.output.pullRequestNumber }}
-        repoUrl: ${{ parameters.repoHost }}?repo=${{ parameters.repoName }}&owner=${{ parameters.repoOrg }}
-
-    - id: register
-      name: Register the entity
-      if: ${{ parameters.autoMerge }}
-      action: catalog:register
-      input:
-        entityRef: ${{ steps.pr.output.remoteUrl }}
+        assignees: ${{ user.entity.metadata.annotations['github.com/user-login'] }}
 
   output:
     links:
