--- a/template.yaml
+++ b/template.yaml
@@ -57,19 +57,28 @@ spec:
                 adrTitle:
                   type: string
                   title: ADR Title
+                  description: A meaningful title for the decision, without being excessively verbose.
+                  default: A meaningful title for the decision.
                 adrStatus:
                   type: string
                   title: Status
+                  description: What is the status, such as proposed, accepted, rejected, deprecated, superseded, etc.?
+                  default: Proposed
                 adrContext:
                   type: string
                   title: Context
+                  description: What is the issue that we're seeing that is motivating this decision or change?
+                  default: Describe the issue...
                 adrDecision:
                   type: string
                   title: Decision
+                  description: What is the change that we're proposing and/or doing?
+                  default: Describe the decision made.
                 adrConsequences:
                   type: string
                   title: Consequences
-
+                  description: What becomes easier or more difficult to do because of this change?
+                  default: Describe the consequences.
   steps:
     - id: fetch
       name: Fetch repository content
