--- a/template.yaml
+++ b/template.yaml
@@ -202,6 +202,7 @@ spec:
       name: Register
       if: ${{ parameters.registerComponent }}
       action: catalog:register
+      optional: true
       input:
         catalogInfoUrl: ${{ steps.pr.output.remoteUrl }}/blob/main/catalog-info.yaml
 
