--- a/template.yaml
+++ b/template.yaml
@@ -37,11 +37,9 @@ spec:
             catalogFilter:
               kind: [Component]
         repoName:
-          title: Repository Name
+          title: Repository Name (Optional Override)
           type: string
-          description: Enter the repository name (project slug)
-          default: ${{ parameters.selectedComponent.metadata.name }}
-          ui:field: TextField
+          description: If the repository name in GitHub is different from the component name or project-slug annotation, provide it here.
 
     - title: ADR Options
       properties:
@@ -133,7 +131,7 @@ spec:
       action: publish:github:pull-request
       input:
         update: true
-        repoUrl: ${{ parameters.repoHost }}?repo=${{ parameters.repoName }}&owner=${{ parameters.repoOrg }}
+        repoUrl: ${{ parameters.repoHost }}?repo=${{ (parameters.repoName or parameters.selectedComponent.metadata.annotations['github.com/project-slug'] or parameters.selectedComponent.metadata.name) }}&owner=${{ parameters.repoOrg }}
         title: "Backstage: Add ADR file"
         branchName: "add-adr-file"
         description: |
