--- a/template.yaml
+++ b/template.yaml
@@ -122,18 +122,24 @@ spec:
           - from: ./docs/adr_template.md
             to: ./docs/${{ parameters.adrFileName }}
 
+    - id: fetch-entity
+      name: Fetch Catalog Entity
+      action: catalog:fetch
+      input:
+        entityRef: ${{ parameters.selectedComponent }}
+
     - id: debug-component
       name: Log Selected Component
       action: debug:log
       input:
-        message: "Selected Component Object -- ${{ parameters.selectedComponent | dump }}"
+        message: "Selected Component Object -- ${{ steps['fetch-entity'].output.entity | dump }}"
 
     - id: pr
       name: Open a PR
       action: publish:github:pull-request
       input:
         update: true
-        repoUrl: ${{ parameters.repoHost }}?repo=${{ parameters.selectedComponent.metadata.annotations['backstage.io/source-location'] }}&owner=${{ parameters.repoOrg }}
+        repoUrl: ${{ steps['fetch-entity'].output.entity.metadata.annotations['backstage.io/source-location'] }}
         title: "Backstage: Add ADR file"
         branchName: "add-adr-file"
         description: |
