--- a/template.yaml
+++ b/template.yaml
@@ -128,18 +128,12 @@ spec:
       input:
         entityRef: ${{ parameters.selectedComponent }}
 
-    - id: debug-component
-      name: Log Selected Component
-      action: debug:log
-      input:
-        message: "Selected Component Object -- ${{ steps['fetch-entity'].output.entity | dump }}"
-
     - id: pr
       name: Open a PR
       action: publish:github:pull-request
       input:
         update: true
-        repoUrl: ${{ steps['fetch-entity'].output.entity.metadata.annotations['backstage.io/source-location'] }}
+        repoUrl: github.com?repo=${{ steps['fetch-entity'].output.entity.metadata.annotations['github.com/project-slug'].split('/')[1] }}&owner=${{ steps['fetch-entity'].output.entity.metadata.annotations['github.com/project-slug'].split('/')[0] }}
         title: "Backstage: Add ADR file"
         branchName: "add-adr-file"
         description: |
