make inputs required

--- a/template.yaml
+++ b/template.yaml
@@ -60,10 +60,12 @@ spec:
           type: string
           title: ADR Sequence Number
           description: 'The sequential number for the ADR (e.g., 001).'
+          required: true
         shortTitle:
           type: string
           title: Short Title
           description: 'A short, descriptive title for the ADR filename (e.g., use-new-database).'
+          required: true
       dependencies:
         preFill:
           oneOf:
